# HALO_NCCL_lib

./: .gitignore  BUG_FIX.md  CLAUDE.md  CMakeLists.txt  CONTEXT_SUMMARY.md  CONTRIBUTING.md  PUSH_TO_GITHUB.md  README.md  halo_lib.hpp  main.cu
